runtime/styles.css
body {
    /* No margins on the side */
    margin: 0;
    padding: 0;
    border: 0;
    background-color: #000;
}

#canvasHolder {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
}

    #canvasHolder > canvas, #canvasHolder > div {
        position: relative;
        width: 100%;
        height: 100%;
        color: #fff;
    }

    #canvasHolder > div {
        z-index: 1;
    }

#error {
    background: #f00;
    position: absolute;
    width: 100%;
    height: 100%;
    text-align: center;
}

